--- a/scss/components/_push-notifications.scss
+++ b/scss/components/_push-notifications.scss
@@ -47,7 +47,7 @@
 
       .header {
         width: 100%;
-        font-family: Oswald;
+        font-family: Oswald, sans-serif;
         font-weight: bold;
         color: var(--blades-black-dark);
         text-align: left;
