--- a/scss/core/_functions.scss
+++ b/scss/core/_functions.scss
@@ -31,9 +31,9 @@ $remPerPixel: 0.0625rem;
   $b: ($y + (-1.105 * $i) + ( 1.702 * $q)) * 255;
 
   // bounds-checking
-  @if ($r < 0){ $r: 0; } @elseif ($r > 255){ $r: 255};
-  @if ($g < 0){ $g: 0; } @elseif ($g > 255){ $g: 255};
-  @if ($b < 0){ $b: 0; } @elseif ($b > 255){ $b: 255};
+  @if ($r < 0){ $r: 0; } @else if ($r > 255){ $r: 255}
+  @if ($g < 0){ $g: 0; } @else if ($g > 255){ $g: 255}
+  @if ($b < 0){ $b: 0; } @else if ($b > 255){ $b: 255}
 
   @return rgb($r, $g, $b);
 }
