--- a/scss/sheets/_cohort-sheet.scss
+++ b/scss/sheets/_cohort-sheet.scss
@@ -64,7 +64,7 @@
             line-height: 20px;
             font-style: italic;
             font-size: toRem(14px);
-            font-family: Oswald;
+            font-family: Oswald, sans-serif;
             text-align: center;
             white-space: nowrap;
             width: 100%;
