--- a/scss/sheets/_npc-sheet.scss
+++ b/scss/sheets/_npc-sheet.scss
@@ -237,7 +237,7 @@
 
         .randomizer-input {
           background: var(--blades-grey);
-          font-family: Oswald;
+          font-family: Oswald, sans-serif;
           text-indent: 5px;
           line-height: 2rem;
 
