--- a/scss/sheets/_sheets.scss
+++ b/scss/sheets/_sheets.scss
@@ -69,7 +69,7 @@
         width: 100%;
         background-color: rgb(255, 255, 0);
         font-weight: bold;
-        font-family: Kirsty;
+        font-family: Kirsty, serif;
         text-align: center;
         font-size: toRem(14px);
         color: var(--blades-black);
